# ESP32_seismic_datalogger

./: CMakeLists.txt  Makefile  README.md  ascii_art.txt  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  component.mk  http_functions.c  http_functions.h  i2c_config.c  i2c_config.h  i2c_ds3231.c  i2c_ds3231.h  i2c_mma8451q.c  i2c_mma8451q.h  main.c  sd_config.c  sd_config.h  sntp_config.c  sntp_config.h  spi_adxl355.c  spi_adxl355.h  spi_config.c  spi_config.h  spi_mcp356x.c  spi_mcp356x.h  task_list.h  timer_conf.c  timer_conf.h  wifi_functions.c  wifi_functions.h
